--- a/it's my project/css/header.css
+++ b/it's my project/css/header.css
@@ -187,6 +187,7 @@
     overflow: hidden;
     padding: 0 17px;
     /*border: 1px solid sandybrown;*/
+    position: relative;
 }
 .download_pannel{
     width: 236px;
@@ -245,15 +246,37 @@
     height: 108px;
     background:url("../img/index.png") 0 -461px ;
 }
-.line-sp{
+.news-con1 li.line-sp{
+    display: inline-block;
 	width:294px;
 	height:36px;
 	text-align:center;
 	background:#414046;
-	line-height:36px;
+    line-height:36px;
+    margin-left: 30px;
 }
 .news-con a{
 	color:#b8b9c5;
+}
+.news-con1 a{
+    color:#b8b9c5;
+    font-size: 14px;
+    font-weight: 100;
+}
+/**/
+.news-con1{
+    display: none;
+    position: absolute;
+    top:66px;
+    left:0;
+    height:268px; 
+    overflow: hidden;
+}
+.news-con1 ul{
+    padding: 0;
+}
+.news-con1 ul li{
+    margin: 5px 10px;
 }
 .line-sp a{
 	color:#f3c258;
